# openpa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.desktop  README.Docker.md  README.md  RELEASING.md  UPGRADING.md  __main__.py  electron-builder.json5  main.js  package.json  pyproject.toml  vite.config.ts
.github/workflows/: cleanup-rc.yml  pr.yml  release-prod.yml  release-rc.yml  release-test.yml  release.yml
.playwright-mcp/: page-2026-04-15T04-42-34-657Z.yml  page-2026-04-15T04-42-37-626Z.yml  page-2026-04-15T04-44-06-327Z.yml  page-2026-04-15T04-45-12-192Z.yml  page-2026-04-15T04-46-50-697Z.yml  page-2026-04-15T04-47-02-272Z.yml  page-2026-04-15T04-47-19-754Z.yml
app/: __version__.py  runtime.py  server.py
app/agent/: __init__.py  agent.py  context_store.py  executor.py  reasoning_agent.py  skill_classifier.py  stream_runner.py  summary.py
app/alembic/: env.py
app/api/: __init__.py  _auth.py  agents.py  channels.py  config.py  conversations.py  dashboard.py  embedding_stream.py  events.py  features.py  file_watchers.py  files.py  llm.py  logs_stream.py  oauth2.py  processes.py  profile_events.py  profiles.py  settings_stream.py  setup_stream.py  system.py  system_vars.py  tokens.py  tools.py  upgrade.py  user_config.py  version.py
app/channels/: __init__.py  base.py  exceptions.py  registry.py
app/cli/: config.py  main.py  streaming.py
app/config/: __init__.py  bootstrap.py  config_schema.py  credentials_file.py  embedding_state.py  install_catalog.py  install_catalog.toml  provider_auth.py  settings.py  settings.toml  setup_profiles.py  setup_profiles.toml  system_vars.py  user_config.py
app/constants/: __init__.py  prompts.py  status.py
app/databases/: __init__.py  base.py  factory.py  postgres.py  sqlite.py
app/documents/: __init__.py  parser.py  sync.py  watcher.py
app/embeddings/: __init__.py  base.py  gemma.py  me5.py
app/events/: __init__.py  conversations_list_bus.py  embedding_state_bus.py  file_watcher_admin_bus.py  file_watcher_manager.py  file_watcher_runner.py  log_stream_bus.py  manager.py  notifications_buffer.py  notifications_bus.py  processes_bus.py  profile_stream_fanout.py  queue.py  runner.py  settings_state_bus.py  setup_progress_bus.py  skill_events_admin_bus.py  stream_bus.py
app/features/: __init__.py  installer.py  manifest.py
app/html_templates/: dashboard.html
app/installer/: __main__.py  catalog.py  output.py  releases.py  tui.py
app/lib/: embedding.py  embedding_lifecycle.py  exception.py  me5.py  template.py
app/middleware/: __init__.py
app/proto/: embedding.proto  embedding_pb2.py  embedding_pb2_grpc.py  me5_embedding.proto  me5_embedding_pb2.py  me5_embedding_pb2_grpc.py
app/remote_agents/: __init__.py  auth.py  remote_agent_connection.py  routing_agent.py
app/services/: __init__.py  manifest.py
app/setup/: cli_install.py
app/skills/: __init__.py  scanner.py  sync.py  tool.py  watcher.py
app/storage/: __init__.py  _sync_base.py  autostart_storage.py  backup.py  conversation_storage.py  dynamic_config_storage.py  event_subscription_storage.py  file_watcher_storage.py  migrations.py  models.py  tool_storage.py
app/system/: restart.py
app/templates/: PERSONA.md  assistant.jinja
app/tools/: __init__.py  base.py  config_manager.py  ids.py  registry.py  tool_config_manager.py
app/types/: __init__.py  __main__.py
app/upgrade/: channel.py  detached.py  manifest.py  runner.py  status.py  version_filter.py
app/utils/: __init__.py  accuweather.py  client_storage.py  common.py  context_storage.py  event_parser.py  formatting.py  logger.py  mcp_server_storage.py  message_tokens.py  persona.py  remote_agent_storage.py  skill_source.py  task_context.py  template.py  working_directory.py
app/vectorstores/: __init__.py  base.py  cache.py  chroma.py  factory.py  qdrant.py
cli/: README.md  go.mod  go.sum  main.go
cli/cmd/: agents.go  channels.go  chat.go  config.go  conv.go  filewatchers.go  helpers.go  llm.go  me.go  proc.go  profile.go  root.go  setup.go  skillevents.go  system_vars.go  tools.go
config/: settings.toml
config/providers/: groq.toml
config/tools/: exec_shell.toml  message_detail.toml  system_file.toml
documents/: [cli]opa agents.md  [cli]opa channels.md  [cli]opa chat.md  [cli]opa config.md  [cli]opa conv.md  [cli]opa file-watchers.md  [cli]opa llm.md  [cli]opa me.md  [cli]opa proc.md  [cli]opa profile.md  [cli]opa setup.md  [cli]opa skill-events.md  [cli]opa system-vars.md  [cli]opa tools.md  [cli]openpa agents.md  [cli]openpa channels.md  [cli]openpa chat.md  [cli]openpa config.md  [cli]openpa conv.md  [cli]openpa file-watchers.md  [cli]openpa llm.md  [cli]openpa me.md  [cli]openpa proc.md  [cli]openpa profile.md  [cli]openpa setup.md  [cli]openpa skill-events.md  [cli]openpa system-vars.md  [cli]openpa tools.md  document.md  writing-a-skill.md
install/: README.md  _catalog.json  _catalog.ps1  _catalog.sh  catalog.toml  install-test.ps1  install-test.sh  install.ps1  install.sh  installer_tui.pyz  uninstall.ps1  uninstall.sh
install/desktop/: entrypoint.sh
install/scripts/: build_catalog.py  build_installer_tui.py
install/templates/: container.env  custom.env.tmpl  docker-compose.override.yml.tmpl  docker-compose.yml.tmpl  docker.env.tmpl  local.env  server.env.tmpl
scripts/: build_ui.sh  sync_ui_version.py
server/: index.ts
src/: App.vue  vite-env.d.ts
src/components/: FileContextMenu.vue  FileGridView.vue  FileTreePanel.vue  MessageBubble.vue  MessageInput.vue  RightPanel.vue
src/composables/: useCwdNavigation.ts
src/services/: channelApi.ts  conversationsListStream.ts  fileWatchersApi.ts
src/stores/: channels.ts  chat.ts
tests/: test_exec_shell_input_keys.py  test_exec_shell_input_mode.py  test_formatting.py  test_server_shutdown.py  test_smoke.py
ui/: .env_example  .gitattributes  electron-builder.json5  electron-builder.test.json5  index.html  package-lock.json  package.json  preload.mjs  vite.config.ts  vite.config.web.ts  vite.config.web.ts.timestamp-1780198498904-866603835b7e9.mjs
(+301 files in other folders)
